--- a/src/index.css
+++ b/src/index.css
@@ -1,130 +1,157 @@
-:root {
-    --mainColor: #0282F9;
-}
-
-
-
-/* -----settings------- */
-a {
-    text-decoration: none;
-
-}
-
-ul,
-li {
-    list-style: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  font-family: Open Sans;
+  font-weight: 700;
 }
 
-html {
-    font-family: sans-serif;
+h3 {
+  font-weight: 700;
+  color: white
+}
+
+.lista-header {
+  color: white;
+  list-style-type: none;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 25px;
+  font-weight: 700;
+}
+
+ul li a {
+  list-style-type: none;
+  text-decoration: none;
+  color: #303030;
+}
+
+nav ul li a:hover {
+  padding-block: 68px;
+  border-bottom: 5px solid #0C6EFD;
+  color: #0C6EFD;
+}
+
+main,
+p {
+  color: white;
+  font-weight: 500
+}
+
+.jumbotron {
+  background-image: url("./assets/img/jumbotron.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 60vh;
+}
+
+.listino {
+  margin: 0;
+  background-color: #303030;
+}
+
+.lista-serie {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-block: 4rem;
+}
+
+.fumetto {
+  flex-basis: calc(90% / 6);
 }
 
 
-
-/* -------main----------- */
-.containerBlack {
-    background-color: black;
-    color: white;
-    height: 20vh;
-    text-align: start;
-    padding: 50px;
-    font-size: 1.7rem;
+.titolo-listino {
+  margin: 0 auto;
+  width: 83%;
+  position: relative;
 }
 
-.BluContainer {
-    background-color: var(--mainColor);
-    color: white;
-    height: 20vh;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    
+.titolo-listino
+button {
+  position: absolute;
+  top: -50px;
+  background-color: #0282f9;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 8px 40px;
+  font-size: 35px;
 }
 
-.BluContainer img{
-    height: 2rem ;
-   padding-left: 3rem;
-
+.fumetto figure {
+  width: 190px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  justify-self: center;
 }
 
-.BluContainer p{
-    padding-left: 0.5rem; 
+.fumetto,
+figure,
+p {
+  justify-self: center;
+  text-transform: uppercase;
 }
 
-
-/*-------footer-------*/
 
 footer {
-    background-image: url(./assets/img/footer-bg.jpg);
-    background-size: cover;
+  background-image: url("./assets/img/footer-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.logoFooter {
-    background-image: url("./assets/img/dc-logo-bg.png");
-    background-repeat: no-repeat;
-    background-position: right;
-    padding: 2rem;
-    padding-left: 5rem;
-    display: flex;
-    width: 95%;
+footer section {
+  display: flex;
+  gap: 4em;
 }
 
-.externalLink {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    color: white;
+footer section ul li a {
+  color: #959595;
 }
 
-.externalLink,
-a {
-    color: lightgray;
+footer section ul li {
+  padding-block: 0.1rem;
 }
 
-
-.externalLink,
-a,
-.titleFooter {
-    color: lightgray;
-
+footer section ul li a {
+  font-weight: 300;
 }
 
-.backgroundFooter {
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    height: 20vh;
+section {
+  padding-block: 20px;
 }
 
-.followUs,
 .button {
-    display: flex;
-    justify-content: space-between;
-
-    align-items: center;
+  font-size: 1rem;
+  background-color: #303030;
+  color: white;
+  border: 2px solid #0282f9;
+  padding: 10px;
 }
 
-.linkSocial {
-    display: flex;
-    justify-content: space-around;
-
-    /* align-items: center; */
-}
-.linkSocial, a {
-    justify-content: space-between;
+.bg-black {
+  background-color: #303030;
+  padding-block: 41px;
 }
 
-.button{
-    border: solid 2px;
-    border-color: var(--mainColor);
-    padding: 10px;
+.footer-icone {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
-/* aggiusta footer con space-araoun o beetwen,
- sistema i div  nel follow us e btn */
+.list-header-footer {
+  color: #0282f9;
+  list-style-type: none;
+}
+
+.social-logos {
+  display: flex;
+  gap: 1.5em;
+  list-style-type: none;
+}
